--- a/index.html
+++ b/index.html
@@ -11,16 +11,141 @@
 </head>
 
 <body>
-  <header>
-    <p>Тест</p>
-    <span>test</span>
+  <header class="header">
+    <div class="container header__container">
+      <a href="#" class="logo-link logo-link_header">
+        <img src="img/logo.png" class="logo-link__img" alt="Логотип сайта">
+      </a>
+      <nav class="header__nav nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link" href="#">
+              О нас
+            </a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">
+              Этапы
+            </a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">
+              Вопросы
+            </a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">
+              Оставить заявку
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <button class="btn-search btn-search_header">
+        <svg class="btn-search__icon" width="24" height="24" viewBox="0 0 24 24" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <rect width="7.56126" height="1.89031"
+            transform="matrix(0.713342 0.700816 -0.713342 0.700816 18.6064 17.3762)" fill="black" />
+          <path
+            d="M20.9303 10.7726C20.9303 16.1533 16.4855 20.5452 10.9652 20.5452C5.44478 20.5452 1 16.1533 1 10.7726C1 5.39198 5.44478 1 10.9652 1C16.4855 1 20.9303 5.39198 20.9303 10.7726Z"
+            stroke="black" stroke-width="2" />
+        </svg>
+      </button>
+    </div>
   </header>
 
-  <main>
+  <main class="main">
+    <section class="hero">
+      <div class="container hero__container">
+        <div class="hero__content">
+          <h1 class="hero__title">
+            Проектные решения любой сложности
+          </h1>
+          <p class="hero__text">
+            Есть над чем задуматься: базовые сценарии поведения пользователей и по сей день остаются уделом проектантов
+          </p>
+          <button class="hero__btn btn">
+            Заказать расчёт
+          </button>
+        </div>
+      </div>
+    </section>
 
+    <section class="about">
+      <div class="container about__container">
+        <h2 class="about__title section-title">
+          О нас
+        </h2>
+        <p class="about__descr">
+          Также как перспективное планирование создаёт необходимость включения в производственный план целого ряда
+          внеочередных мероприятий с учётом комплекса экспериментов, поражающих по своей масштабности и грандиозности.
+          А также диаграммы связей могут быть описаны максимально подробно. Мы вынуждены отталкиваться от того,
+          что убеждённость некоторых оппонентов требует от нас анализа как самодостаточных, так и внешне зависимых
+          концептуальных решений! Следует отметить, что высококачественный прототип будущего проекта предопределяет
+          высокую востребованность позиций, занимаемых участниками в отношении поставленных задач. Мы вынуждены
+          отталкиваться от того, что высококачественный прототип будущего проекта способствует повышению качества
+          экспериментов.
+        </p>
+        <div class="about__grid-container">
+          <div class="about__left">
+            <div class="about__left-content">
+              <p class="about__left-text">
+                Принимая во внимание показатели успешности, перспективное планирование способствует подготовке
+                и реализации новых принципов
+              </p>
+              <button class="about__btn btn">
+                Подробнее
+              </button>
+            </div>
+          </div>
+          <div class="about__right">
+            <div class="about__right-item">
+              <h4 class="about__subtitle subtitle">
+                Консультация с широким активом
+              </h4>
+              <p class="about__right-text">
+                А также свежий взгляд на привычные вещи — безусловно открывает новые горизонты для как самодостаточных,
+                так и внешне зависимых концептуальных решений
+              </p>
+            </div>
+            <div class="about__right-item">
+              <h4 class="about__subtitle subtitle">
+                В своём стремлении повысить
+              </h4>
+              <p class="about__right-text">
+                Качество жизни, они забывают, что сплочённость команды профессионалов представляет собой интересный
+                эксперимент проверки прогресса профессионального сообщества
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="stages">
+      <div class="container stages__container">
+        <h2 class="stages__title section-title">
+          Этапы
+        </h2>
+        <div class="stages__left">
+          <h4 class="stages__subtitle subtitle subtitle_stages">
+            Проводим консультацию
+          </h4>
+          <p class="stages__text">
+            Влечёт за собой процесс внедрения и модернизации приоритизации разума над эмоциями. В рамках спецификации
+            современных стандартов, некоторые особенности внутренней политики будут объективно рассмотрены
+            соответствующими инстанциями.
+            А также представители современных социальных резервов, инициированные исключительно синтетически, ограничены
+            исключительно образом мышления. Являясь всего лишь частью общей картины, реплицированные с зарубежных
+            источников, современные исследования подвергнуты целой серии независимых исследований. Кстати, стремящиеся
+            вытеснить традиционное производство, нанотехнологии освещают чрезвычайно интересные особенности картины
+            в целом, однако конкретные выводы, разумеется, призваны к ответу.
+          </p>
+        </div>
+      </div>
+    </section>
   </main>
 
-  <footer>
+  <footer class="footer">
 
   </footer>
 </body>
