--- a/index.html
+++ b/index.html
@@ -148,15 +148,50 @@
             Договор
           </button>
         </div>
-        <div class="stages__right-wrap" style="background-image: none;">
-          
+        <div class="stages__right-wrap" style="background-image: none;"></div>
+      </div>
+    </section>
+
+    <section class="faq">
+      <div class="container faq__container">
+        <h2 class="faq__title section-title">
+
+        </h2>
+        <div class="faq__list">
+          <div class="faq__item">
+            <h4 class="subtitle">
+              Из чего формируется конечная стоимость проекта?
+            </h4>
+            <p class="faq__answer">
+              Приятно, граждане, наблюдать, как некоторые особенности внутренней политики могут быть призваны к ответу.
+            </p>
+          </div>
+          <div class="faq__item">
+            <h4 class="subtitle">
+              У меня есть свой проект. Можно ли его реализовать?
+            </h4>
+            <p class="faq__answer">
+              А ещё некоторые особенности внутренней политики, которые представляют собой яркий пример континентального
+              типа.
+            </p>
+          </div>
+          <div class="faq__item">
+            <h4 class="subtitle">
+              Я выбираю между разными компаниями. Почему вы?
+            </h4>
+            <p class="faq__answer">
+              Явные признаки победы институционализации набирают популярность среди определённых слоёв населения.
+            </p>
+          </div>
         </div>
       </div>
     </section>
   </main>
 
   <footer class="footer">
+    <div class="container footer__container">
 
+    </div>
   </footer>
 </body>
 
