--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Евклид</title>
-  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="img/favicon.png">
 </head>
@@ -194,7 +193,7 @@
         <a href="" class="logo-link logo-link_footer">
           <img class="logo-link__img" src="/img/logo.png" alt="Логотип">
         </a>
-        <ul class="footer__links-list">
+        <ul class="footer__links-list list-reset">
           <li class="footer__item-link">
             <a href="#" class="footer__link">
               О нас
