--- a/index.html
+++ b/index.html
@@ -96,9 +96,8 @@
               </button>
             </div>
           </div>
-          <!-- TODO: бэкграунды через псевдоклассы -->
           <div class="about__right-wrap">
-            <div class="about__right-item">
+            <div class="about__right-item about__right-item_bg_1">
               <h4 class="about__subtitle subtitle">
                 Консультация с широким активом
               </h4>
@@ -107,7 +106,7 @@
                 так и внешне зависимых концептуальных решений
               </p>
             </div>
-            <div class="about__right-item">
+            <div class="about__right-item about__right-item_bg_2">
               <h4 class="about__subtitle subtitle">
                 В своём стремлении повысить
               </h4>
