--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Евклид</title>
-  <link rel="stylesheet" href="styles/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="img/favicon.png">
 </head>
 
